src/css/structure/modules/infragistics.ui.grid.css
/* ... */
/* BUG:229991 Marin Popov 1.23.2017; When grid is MRL and width is in % the header cells and content cells are misaligned.*/
.ui-iggrid-headertable-mrl {
    width : 100%;
}

.ui-iggrid > .ui-widget-header.ui-helper-reset {
    border-width : 0;
}

.ui-widget-content.ui-iggrid-filterddlist, .ui-widget-content.ui-iggrid-hiding-dropdown-list, .ui-widget-content.ui-iggrid-columnmoving-dropdown-list, .ui-widget-content.ui-iggrid-featurechooser-list, .ui-iggrid-summaries-dropdown-listcontainer {
    border          : none;
    margin          : 0;
    padding         : 0;
    list-style-type : none;
}

.ui-iggrid .ui-iggrid-headercaption, .ui-iggrid .ui-iggrid-footer, .ui-iggrid .ui-iggrid-toolbar {
    padding    : 0.6em 0.4em;
    text-align : center;
    cursor     : default;
}

.ui-iggrid th.ui-state-default, .ui-iggrid th.ui-state-hover, .ui-iggrid th.ui-state-active,
.ui-iggrid th.ui-state-default a, .ui-iggrid th.ui-state-hover a, .ui-iggrid th.ui-state-active a {
    font-weight : normal;
    text-align  : left;
}

.ui-iggrid .ui-ig-altrecord {
    background-color : rgba(153, 153, 153, 0.2);
}

.ui-iggrid .ui-iggrid-footer, .ui-iggrid .ui-iggrid-toolbar {
    font-weight : normal;
    text-align  : left;
    display     : block;
}

.ui-iggrid th, .ui-iggrid th.ui-state-default, .ui-iggrid th.ui-state-hover, .ui-iggrid th.ui-state-active {
    text-align  : left;
    white-space : nowrap;
    height      : 1.6em;
}

.ui-iggrid table tbody td, .ui-iggrid .ui-iggrid-header, .ui-iggrid table th {
    padding : 4px;
}

.ui-iggrid .ui-iggrid-tablebody td {
    border-width : 1px;
}

.ui-iggrid table thead a {
    text-decoration : none;
}

.ui-iggrid td.ui-state-default,
.ui-iggrid td.ui-state-highlight,
.ui-iggrid td.ui-state-hover {
    border-width : 1px;
    font-weight  : normal;
}

.ui-iggrid td.ui-state-highlight p {
}

.ui-iggrid .ui-iggrid-footer .ui-state-default, .ui-iggrid .ui-iggrid-toolbar .ui-state-default, .ui-iggrid .ui-iggrid-footer .ui-state-default a, .ui-iggrid .ui-iggrid-toolbar .ui-state-default a {
    text-decoration : none;
}

.ui-iggrid .ui-iggrid-toolbar .ui-iggrid-results {
    float : right;
}

.ui-iggrid .ui-iggrid-footer .ui-iggrid-results {
    float       : left;
    line-height : 1.9em;
}

.ui-iggrid .ui-iggrid-paging,
.ui-iggrid th .ui-iggrid-indicatorcontainer,
.ui-iggrid th .ui-iggrid-indicatorcontainer .ui-icon {
    float : right;
}

.ui-iggrid .ui-iggrid-paging > div,
.ui-iggrid .ui-iggrid-paging .ui-iggrid-paging-item span,
.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdownlabels,
.ui-iggrid .ui-iggrid-paging li,
    /*.ui-iggrid .ui-iggrid-paging input,
    .ui-iggrid .ui-iggrid-results input,*/
.ui-iggrid .ui-iggrid-results span {
    float       : left;
    /*padding:0 3px; */
    padding     : 0 0.3em;
    line-height : 1.4em;
}

.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdowncontainer .ui-igedit-container,
.ui-iggrid .ui-iggrid-results .ui-igedit-container,
.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdowncontainer {
    float       : left;
    height      : 1.8em;
    line-height : 1.4em;
}

.ui-iggrid .ui-iggrid-results .ui-igedit-input,
.ui-iggrid .ui-iggrid-paging .ui-igedit-input {
    line-height : 1.4em;
    /*min-height: 2em;*/
}

.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdowncontainer,
.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdowncontainer .ui-igedit-input {
    height : 100%;
}

.ui-iggrid .ui-iggrid-paging .ui-iggrid-paging-item span.ui-icon,
.ui-iggrid .ui-iggrid-paging .ui-iggrid-pagedropdowncontainer,
.ui-iggrid .ui-iggrid-results .ui-iggrid-pagesizedropdown {
    padding : 0;
}

.ui-iggrid th .ui-iggrid-indicatorcontainer a {
    float   : right;
    display : block;
}

.no-boxsizing .ui-iggrid-indicatorcontainer a {
    max-width : 16px;
}

.ui-iggrid .ui-iggrid-paging .ui-igedit-button,
.ui-iggrid .ui-iggrid-results .ui-igedit-button {
    border-width : 0 0 0 1px;
}

a.ui-iggrid-pagelink, a.ui-iggrid-pagelinkcurrent {
    line-height : 1.4em;
}

.ui-iggrid .ui-iggrid-paging .ui-icon, .ui-iggrid .ui-iggrid-results .ui-icon {
    padding : 0;
}

.ui-iggrid .ui-iggrid-paging-item, .ui-iggrid .ui-iggrid-results-item {
    float : left;
}

.ui-iggrid .ui-iggrid-paging-item {
    position   : relative;
    height     : 1.4em;
    box-sizing : content-box;
}

.ui-iggrid .ui-iggrid-paging-item span {
    cursor              : pointer;
    -moz-user-select    : none;
    -webkit-user-select : none;
    user-select         : none;
}

.ui-iggrid .ui-iggrid-paging-item a:active,
.ui-iggrid .ui-iggrid-paging-item a:focus {
    outline : 0 none;
}

.ui-iggrid .ui-iggrid-paging-item span.ui-icon {
    margin-top : -8px;
    position   : absolute;
    top        : 50%;
}

/* M.H. 28 Apr 2016 Fix for bug 216219: Auto-sizing a column with double mouse click doesn't take into account the column header text */
.ui-iggrid-measurement-container .ui-iggrid-featurechooserbutton {
    padding-left : 2px;
}

/*boostrap border-box force fix*/
.ui-iggrid .ui-iggrid-pager * {
    -webkit-box-sizing : content-box;
    -moz-box-sizing    : content-box;
    box-sizing         : content-box;
}

.ui-iggrid-firstpage .ui-icon, .ui-iggrid-prevpage .ui-icon {
    left : 3px;
}

.ui-iggrid-nextpage .ui-icon, .ui-iggrid-lastpage .ui-icon {
    right : 3px;
}

/*padding left for paging items with icons to the left */
.ui-iggrid .ui-iggrid-paging .ui-iggrid-firstpage, .ui-iggrid .ui-iggrid-paging .ui-iggrid-prevpage {
    padding-left : 20px;
}

/*padding right for paging items with icons to the right */
.ui-iggrid .ui-iggrid-paging .ui-iggrid-nextpage, .ui-iggrid .ui-iggrid-paging .ui-iggrid-lastpage {
    padding-right : 20px;
}

.ui-iggrid-pagelist {
    padding : 0 6px;
}

.ui-iggrid-pagelist li {
    margin : 0 0.1em;
}

.ui-iggrid .ui-iggrid-filterbutton {
    float : left;
}

.ui-iggrid th .ui-iggrid-filterbutton,
.ui-iggrid .ui-iggrid-filterbuttonright {
    float  : right;
    margin : 0;
}
/* ... */

